--- a/products-trade/less/products-page/_product-detail.less
+++ b/products-trade/less/products-page/_product-detail.less
@@ -565,6 +565,10 @@
 		.product-details{
 			margin: 0 auto;
 			max-width: 293px;
+			form{
+				position: relative;
+				.clearfix();
+			}			
 			.product-code{
 				color: @text-code;
 				font-size: 15px;
@@ -689,8 +693,13 @@
 				.quantity-number{
 					width: 100%;
 					height: 60px;
-					font-size: 21px;
-					border:solid 1px @border-grey;
+					font-size: 16px;
+					float: left;
+					@media (min-width: @screen-sm){
+						font-size: 21px;
+						
+					}
+					border: solid 1px @border-grey;
 					background-color: @bg-table-header-grey;
 					text-align:center;					
 				}//END quantity-number
